Fri Sep 13 08:32:06 EDT 2002	Brian Bruns <camber@ais.org>
	* src/tds/tds.dox: doxygen config file
	* src/tds/mem.c: start doxygen style comments

Fri Sep 13  8:24:54 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c: fix dbcoltype return for nullable bit

Fri Sep 13  8:24:54 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* Makefile.am freetds.spec.in include/Makefile.am:
	* src/apps/Makefile.am src/ctlib/unittests/Makefile.am:
	* src/dblib/unittests/Makefile.am src/odbc/Makefile.am:
	* src/odbc/unittests/Makefile.am src/pool/Makefile.am:
	* src/tds/unittests/Makefile.am:
	- do not install unneeded include file
	- cleanup spec file
	- fix build from different directory

Thu Sep 12 19:28:07 EDT 2002	Brian Bruns <camber@ais.org>
	* src/dblib/unittests/t0022.c: test output params
	* src/dblib/unittests/Makefile.am: add t0022
	* src/dblib/dblib.c: implement dbnumrets, and dbret*() funcs
	* src/tds/token.c(tds_process_param_result): load paraminfo struct instead
	  of skipping

Thu Sep 12 15:59:01 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/apps/tsql.c:
	- fix tsql so it will exit on EOF instead of hanging.
	- Problem reported by Leon Brooks <leon@cclinic.com.au> ... thanks!

Thu Sep 12 15:17:01 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/tds_layer.txt include/tds.h.in src/apps/tsql.c src/ctlib/ct.c
	  src/dblib/dblib.c src/dblib/unittests/common.c src/odbc/odbc.c
	  src/pool/member.c src/pool/user.c src/tds/login.c src/tds/mem.c
	  src/tds/token.c src/tds/unittests/common.c:
	- When the server sends a message, first invoke the message handler
	  with the specified message.  Then invoke the error handler with
	  error #20028 (SYBESMSG).  This gives us the behavior that Sybase's
	  libraries produce.
	- This change required modification to the API for
	  tds_connect().  It is now necessary for the caller to allocate a
	  TDSSOCKET with tds_alloc_socket(), and set its parent with
	  tds_set_parent().